--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="Nama Home" content="Вже понад 16 років ми створюємо комфорт, стиль і функціональність у просторі за допомогою сучасних сонцезахисних рішень. Наш досвід — це сотні реалізованих проектів: від затишних квартир і приватних будинків до відомих ресторанів, салонів і громадських просторів Харкова."/>
+    <meta name="description" content="Штори, карнизи, маркізи, перголи, деревʼяні жалюзі, штори плісе, рулоні штори."/>
+    <meta name="keywords" content="штори, карнизи, маркізи, перголи, деревʼяні жалюзі, штори плісе, рулоні штори"/>
+    <meta name="Author" content="darkius"/>
+    <meta name="Copyright" content="Nama Home UA"/>
+    <meta property="og:title" content="Nama Home"/>
+    <meta property="og:description" content="Штори, карнизи, маркізи, перголи, деревʼяні жалюзі, штори плісе, рулоні штори."/>
+    <meta property="og:image" content="https://elronic3.github.io/nama_home/img/nama_icon.svg"/>
+    <meta property="og:url" content="https://elronic3.github.io/nama_home/"/>
+
     <title>Nama Home</title>
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
