--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <title>Nama Home</title>
     <link rel="stylesheet" href="css/style.min.css" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <header class="header">
